# CamelMR

./: .gitignore  CamelMR.opam  LICENSE  README.md  dune-project
lib/: dune
src/: dune  main.ml  map_reduce.ml  parallel_reduce.ml  simple_reduce.ml  supported_nodes.ml  test_camelmr.ml
test/: dune
